-Enabled Sound in Debug mode for development on Windows. -Added File->Save File... menu item. -Updated files for r206 release.

--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -1,35 +1,23 @@
 World of Warcraft Model Viewer v0.7.0.1
 
-r191
-- Fix some SLASH problem
-- Enhanced the File List filter
-- Export function File List when right click
-
-r190
--Cleaned up OS/Platform definitions.
--Added OS/Platform redundancies. 32-bit Linux builds now need a _LINUX32
-defined.
--removed some compiler warnings in the LWO exporter.
-
-r189
-- File List color fix
-- (DEV WORK) Remove dup StormLib.h & StormPort.h
-- Linux Compatible
-- (DEV WORK) BLP type 0 supported
-
-r175
-- Import Armory Fixed
-
-r169
--Fixed Null issue in LW Bone Export function. (Currently unused)
--Updated some StormLib files and the .libs
-
-r154
--WMV will now produce an error message if it can't find the World of Warcraft
-directory.
--WMV now wants you to specify the WoW directory, not the WoW/Data directory.
--In Windows, WMV will now prompt for the user to select their WoW directory if
-it can't find the registry info.
+r206
+ - You can now Save Files listed in WMV to your Hard-drive. Use File->Save File... or Right-Click the file in the File List!
+ - You can now browser Sounds, Images and ADTs in the file List.
+ - Browsing Images will display them in the WMV background. (Does not work if a WMO was last selected.)
+ - Enhanced the File List filter.
+ - WMV will now produce an error message if it can't find the World of Warcraft directory.
+ - WMV now wants you to specify the WoW directory, not the WoW/Data directory.
+ - In Windows, WMV will now prompt for the user to select their WoW directory if it can't find the registry info.
+ - File List Color Fix.
+ - Import Armory Fixed.
+ - (Dev Work) Increased Linux Compatiblility.
+ - (Dev Work) Updated some StormLib files and the .libs.
+ - (Dev Work) Fix some SLASH problems.
+ - (Dev Work) Cleaned up OS/Platform definitions.
+ - (Dev Work) Added OS/Platform redundancies. 32-bit Linux builds now need a _LINUX32 defined.
+ - (Dev Work) Removed some compiler warnings in the LWO exporter.
+ - (Dev Work) BLP type 0 supported.
+ - (Dev Work) Fixed Null issue in LW Bone Export function.
 
 r142
  - Expanded Cataclysm support.
