--- a/trunk/src/stormlib/doc/History.txt
+++ b/trunk/src/stormlib/doc/History.txt
@@ -2,9 +2,18 @@
   StormLib history
   ================
 
+ Version 7.11
+ 
+ - Support for MPQs v 3.0 (WOW-Cataclysm BETA)
+ - StormLib now deals properly with files that have MPQ_SECTOR_CHECKSUM missing,
+   but have sector checksum entry present in the sector offset table
+
  Version 7.10
  
  - Support for partial MPQs ("interface.MPQ.part")
+ - The only operation that is externally allowed to do with internal files
+   ("(listfile)", "(attributes)" and "(signature)") is reading. Attempt to modify any of the file
+   fails and GetLastError returns ERROR_INTERNAL_FILE
  - Fixed memory leak that has occured when writing more than one sector to the file at once
 
  Version 7.01
