--- a/trunk/doc/ChangeLog.txt
+++ b/trunk/doc/ChangeLog.txt
@@ -1,5 +1,18 @@
 World of Warcraft Model Viewer v0.7.0.1
 
+r487
+ - Updated for 4.0.x.
+ - Depreciated 3.3.x edition of WoW.
+ - Removed Cata message.
+ - Updated Error Messages 
+ - Increased 64-bit compatibility.
+ - WMV now has much more useful errors.
+ - Increased Mac Compatibility.
+ - LWO Exporter
+  - Fixed Parent Layer error.
+  - Continued worked on new Doodad exporter
+
+
 r462
  - WMV can now be used while WoW is running!
  - Various Updates for Cataclysm Beta!
