--- a/trunk/doc/ChangeLog.txt
+++ b/trunk/doc/ChangeLog.txt
@@ -1,7 +1,11 @@
 World of Warcraft Model Viewer v0.7.0.1
 
-r492
+r496
  - Eye Glows are now a Character Option! Choose from None, Default, and Death Knight!
+ - Updated items.csv & npcs.csv files!
+ - OldWorld.MPQ is now ignored. Only the new Cataclysm world is available.
+ - Fixed DBC Reading Error
+ - Fixed NPC skins problem
  - LWO Exporter:
   - New M2 Exporter now serving as main LWO M2 Exporter.
   - M2 Exporter now supports Luminous surfaces.
@@ -11,6 +15,10 @@ r492
   - Increased 64-bit compatibility.
   - Added Matrix to Quaternion function.
   - M2's animGeometry, animTextures and animBones boolans are now public.
+  - Updated StormLib
+  - Fixed langOffset for gameVersion 40000.
+  - remove redundant functions in mpq_stormlib 
+
 
 r487
  - Updated for 4.0.x.
@@ -23,7 +31,6 @@ r487
  - LWO Exporter:
   - Fixed Parent Layer error.
   - Continued worked on new Doodad exporter
-
 
 r462
  - WMV can now be used while WoW is running!
