--- a/wiki/Exporting.wiki
+++ b/wiki/Exporting.wiki
@@ -22,6 +22,7 @@ Currently, WMV can export models to the following formats:
  * <a href="http://www.newtek.com/lightwave/">Lightwave 3D</a>: M2 & WMO files
  * <a href="http://en.wikipedia.org/wiki/Obj">Waveform OBJ file</a>: M2 & WMO files
  * <a href="http://chumbalum.swissquake.ch/">Milkshape 3D</a>: M2 files only
+ * <a href="http://usa.autodesk.com/adsk/servlet/pc/index?siteID=123112&id=6837478">Autodesk FBX</a>: M2 files only
  * <a href="http://usa.autodesk.com/adsk/servlet/pc/index?id=13567410&siteID=123112">Autodesk 3DS file</a>: M2 files only
  * <a href="http://www.web3d.org/x3d/">X3D & X3D in XHTML</a>: M2 files only
 
@@ -45,7 +46,7 @@ M2 Exporters can't do the following:
 
 ==WMO Exporter Limitations==
 WMO Exporters can't do the following:
- * Export Vertex Lighting/Colors
+ * Export Vertex Lighting/Colors (Exeption: Lightwave 3D)
  * Export Lights (Exeption: Lightwave 3D)
  * Export Doodad Objects/Nulls (Exeption: Lightwave 3D)
 
@@ -58,5 +59,4 @@ Milkshape 3D Exporter:
  * *Exported Bones don't support the Init Pose*.
 
 Lightwave 3D Exporter:
- * *Exports lots of extra, unmerged points*: Due to the difference in how Lightwave and WMV store data, we've been having difficultly getting the Lightwave Exporter to work properly in this reguard.
- * *WMO Surfaces are sometimes wrong*: Lightwave believes that every surface should have a unique name. WoW does not. We're working on a method to fix this issue.
+ * *M2 file's weightmaps currently don't fully export.
